@@ -394,6 +394,15 @@
   <p align="left">The x, y and z values specify the start and end coordinates 
     of the box cut. If cutwalls is true, the function will cut walls; if cutfloors 
     is true, it'll cut floors.</p>
+  <p align="left"><strong>y. Mount</strong> - mounts a zip file in the data directory 
+    into a virtual path.<br>
+    Syntax: <font size="2" face="Courier New, Courier, mono">Mount <em>filename</em>, 
+    <em>path</em></font><br>
+    Example: <font size="2" face="Courier New, Courier, mono">Mount myfile.zip, 
+    mydirectory</font></p>
+  <p align="left">In this example, the file myfile.zip located in Skyscraper's 
+    data directory will be mounted as &quot;mydirectory&quot;, and so a file such 
+    as test.jpg inside that zip file will appear as &quot;mydirectory/test.jpg&quot;.</p>
   <p>&nbsp;</p>
   <p align="left"><strong>7. END command</strong></p>
   <p align="left">The End command tells the software to stop processing the current 
